--- a/simple_api/package.json
+++ b/simple_api/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "supervisor": "^0.12.0"
   }
 }
